frame/support/test/tests/derive_no_bound_ui/debug.stderr
error[E0277]: `<T as Config>::C` doesn't implement `std::fmt::Debug`
 --> tests/derive_no_bound_ui/debug.rs:7:2
  |
7 |     c: T::C,
  |     ^ `<T as Config>::C` cannot be formatted using `{:?}` because it doesn't implement `std::fmt::Debug`
  |
  = help: the trait `std::fmt::Debug` is not implemented for `<T as Config>::C`
  = note: required for the cast from `<T as Config>::C` to the object type `dyn std::fmt::Debug`
