frame/support/test/tests/derive_no_bound_ui/debug.rs
trait Config {
	type C;
}

#[derive(frame_support::DebugNoBound)]
struct Foo<T: Config> {
	c: T::C,
}

fn main() {}
